unpackaged/main/default/objects/Tax_Free_Form__c/Tax_Free_Form__c.object-meta.xml
<CustomObject>
    <label>Tax Free Form</label>
    <nameField>
        <label>Tax Free Form Id</label>
        <type>Text</type>
    </nameField>
    <pluralLabel>Tax Free Form</pluralLabel>
    <sharingModel>ReadWrite</sharingModel>
</CustomObject>