unpackaged/main/default/objects/Tax_Free_Form__c/fields/Account_Shop__c.field-meta.xml
<CustomField>
    <fullName>Account_Shop__c</fullName>
    <deleteConstraint>SetNull</deleteConstraint>
    <label>Account Shop</label>
    <referenceTo>Account</referenceTo>
    <relationshipLabel>Tax Free Form</relationshipLabel>
    <relationshipName>Tax_Free_Form</relationshipName>
    <type>Lookup</type>
</CustomField>