unpackaged/main/default/objects/Tax_Free_Form__c/fields/Alipay_Id__c.field-meta.xml
<CustomField>
    <fullName>Alipay_Id__c</fullName>
    <label>Alipay Id</label>
    <length>255</length>
    <type>Text</type>
</CustomField>