unpackaged/main/default/objects/Tax_Free_Form__c/fields/Case__c.field-meta.xml
<CustomField>
    <fullName>Case__c</fullName>
    <deleteConstraint>SetNull</deleteConstraint>
    <label>Additional Form on Case</label>
    <referenceTo>Case</referenceTo>
    <relationshipLabel>Additional Tax Free Forms</relationshipLabel>
    <relationshipName>Tax_Free_Form</relationshipName>
    <type>Lookup</type>
</CustomField>