unpackaged/main/default/objects/Tax_Free_Form__c/fields/Country_Of_Purchase__c.field-meta.xml
<CustomField>
    <fullName>Country_Of_Purchase__c</fullName>
    <label>Country Of Purchase</label>
    <length>255</length>
    <type>Text</type>
</CustomField>