unpackaged/main/default/objects/Tax_Free_Form__c/fields/Credit_Card_Number__c.field-meta.xml
<CustomField>
    <fullName>Credit_Card_Number__c</fullName>
    <label>Credit Card Number</label>
    <length>100</length>
    <type>Text</type>
</CustomField>