unpackaged/main/default/objects/Tax_Free_Form__c/fields/Credit_Card_Type__c.field-meta.xml
<CustomField>
    <fullName>Credit_Card_Type__c</fullName>
    <formula>IF(LEFT(Credit_Card_Number__c, 2) = &quot;34&quot;, &quot;American Express&quot;, 
IF(LEFT(Credit_Card_Number__c, 2) = &quot;37&quot;, &quot;American Express&quot;, 
IF(LEFT(Credit_Card_Number__c, 3) = &quot;622&quot;, &quot;China Union Pay&quot;,
IF(LEFT(Credit_Card_Number__c, 3) = &quot;624&quot;, &quot;China Union Pay&quot;,
IF(LEFT(Credit_Card_Number__c, 3) = &quot;625&quot;, &quot;China Union Pay&quot;,
IF(LEFT(Credit_Card_Number__c, 3) = &quot;626&quot;, &quot;China Union Pay&quot;,
IF(LEFT(Credit_Card_Number__c, 3) = &quot;628&quot;, &quot;China Union Pay&quot;,
IF(LEFT(Credit_Card_Number__c, 2) = &quot;30&quot;, &quot;Diners Club&quot;, 
IF(LEFT(Credit_Card_Number__c, 2) = &quot;36&quot;, &quot;Diners Club&quot;,
IF(LEFT(Credit_Card_Number__c, 4) = &quot;2014&quot;, &quot;Diners Club&quot;,
IF(LEFT(Credit_Card_Number__c, 4) = &quot;2149&quot;, &quot;Diners Club&quot;,
IF(LEFT(Credit_Card_Number__c, 2) = &quot;35&quot;, &quot;JCB&quot;,
IF(LEFT(Credit_Card_Number__c, 2) = &quot;51&quot;, &quot;Mastercard&quot;,
IF(LEFT(Credit_Card_Number__c, 2) = &quot;52&quot;, &quot;Mastercard&quot;, 
IF(LEFT(Credit_Card_Number__c, 2) = &quot;53&quot;, &quot;Mastercard&quot;,
IF(LEFT(Credit_Card_Number__c, 2) = &quot;54&quot;, &quot;Mastercard&quot;, 
IF(LEFT(Credit_Card_Number__c, 2) = &quot;55&quot;, &quot;Mastercard&quot;,
IF(LEFT(Credit_Card_Number__c, 1) = &quot;4&quot;, &quot;Visa&quot;,
IF(LEFT(Credit_Card_Number__c, 1) = &quot;&quot;, &quot;&quot;,&quot;Unknown&quot;)))))))))))))))))))</formula>
    <formulaTreatBlanksAs>BlankAsZero</formulaTreatBlanksAs>
    <label>Credit Card Type</label>
    <type>Text</type>
</CustomField>