unpackaged/main/default/objects/Tax_Free_Form__c/fields/Customs_Date_Stamp__c.field-meta.xml
<CustomField>
    <fullName>Customs_Date_Stamp__c</fullName>
    <label>Customs Date Stamp</label>
    <type>DateTime</type>
</CustomField>