unpackaged/main/default/objects/Tax_Free_Form__c/fields/Error_Codes__c.field-meta.xml
<CustomField>
    <fullName>Error_Codes__c</fullName>
    <label>Error Codes</label>
    <length>131072</length>
    <type>LongTextArea</type>
</CustomField>