unpackaged/main/default/objects/Tax_Free_Form__c/fields/Exit_Point__c.field-meta.xml
<CustomField>
    <fullName>Exit_Point__c</fullName>
    <label>Exit Point</label>
    <precision>18</precision>
    <scale>0</scale>
    <type>Number</type>
</CustomField>