unpackaged/main/default/objects/Tax_Free_Form__c/fields/ExternalId_Tax_Free_Form_Id__c.field-meta.xml
<CustomField>
    <fullName>ExternalId_Tax_Free_Form_Id__c</fullName>
    <externalId>true</externalId>
    <label>ExternalId Tax Free Form Id</label>
    <length>255</length>
    <type>Text</type>
</CustomField>