unpackaged/main/default/objects/Tax_Free_Form__c/fields/Latest_Payment_Status__c.field-meta.xml
<CustomField>
    <fullName>Latest_Payment_Status__c</fullName>
    <label>Latest Payment Status</label>
    <length>255</length>
    <type>Text</type>
</CustomField>