unpackaged/main/default/objects/Tax_Free_Form__c/fields/Masked_Card_Number__c.field-meta.xml
<CustomField>
    <fullName>Masked_Card_Number__c</fullName>
    <label>Masked Card Number</label>
    <length>100</length>
    <maskChar>asterisk</maskChar>
    <maskType>creditCard</maskType>
    <type>EncryptedText</type>
</CustomField>