unpackaged/main/default/objects/Tax_Free_Form__c/fields/P2_Entry_Date__c.field-meta.xml
<CustomField>
    <fullName>P2_Entry_Date__c</fullName>
    <label>P2 Entry Date</label>
    <type>DateTime</type>
</CustomField>