unpackaged/main/default/objects/Tax_Free_Form__c/fields/Premier_Pass_Type__c.field-meta.xml
<CustomField>
    <fullName>Premier_Pass_Type__c</fullName>
    <formula>IF(BEGINS(Tourist_Premier_Pass_Id__c, &quot;888100&quot;) , &quot;CTrip&quot;,
IF(Tourist_Premier_Pass_Id__c = &quot;&quot;,&quot;&quot;, &quot;Standard&quot;))</formula>
    <formulaTreatBlanksAs>BlankAsZero</formulaTreatBlanksAs>
    <label>Planet Pass Type</label>
    <type>Text</type>
</CustomField>