unpackaged/main/default/objects/Tax_Free_Form__c/fields/Qualified_Date__c.field-meta.xml
<CustomField>
    <fullName>Qualified_Date__c</fullName>
    <label>Qualified Date</label>
    <type>DateTime</type>
</CustomField>