unpackaged/main/default/objects/Tax_Free_Form__c/fields/Refund_Amount_Number__c.field-meta.xml
<CustomField>
    <fullName>Refund_Amount_Number__c</fullName>
    <label>Refund Amount</label>
    <precision>18</precision>
    <scale>2</scale>
    <type>Number</type>
</CustomField>