unpackaged/main/default/objects/Tax_Free_Form__c/fields/Refund_Currency__c.field-meta.xml
<CustomField>
    <fullName>Refund_Currency__c</fullName>
    <label>Refund Currency</label>
    <length>255</length>
    <type>Text</type>
</CustomField>