unpackaged/main/default/objects/Tax_Free_Form__c/fields/Refund_Method__c.field-meta.xml
<CustomField>
    <fullName>Refund_Method__c</fullName>
    <label>Refund Method</label>
    <length>255</length>
    <type>Text</type>
</CustomField>