unpackaged/main/default/objects/Tax_Free_Form__c/fields/Refund_Method_Formula__c.field-meta.xml
<CustomField>
    <fullName>Refund_Method_Formula__c</fullName>
    <formula>IF(CONTAINS(Refund_Method__c, &quot;Credit Card&quot;), &quot;Credit Card&quot;, Refund_Method__c )</formula>
    <formulaTreatBlanksAs>BlankAsZero</formulaTreatBlanksAs>
    <label>Refund Method</label>
    <type>Text</type>
</CustomField>