unpackaged/main/default/objects/Tax_Free_Form__c/fields/Retailer_Id__c.field-meta.xml
<CustomField>
    <fullName>Retailer_Id__c</fullName>
    <label>Retailer Id</label>
    <length>255</length>
    <type>Text</type>
</CustomField>