unpackaged/main/default/objects/Tax_Free_Form__c/fields/Sales_Currency__c.field-meta.xml
<CustomField>
    <fullName>Sales_Currency__c</fullName>
    <label>Sales Currency</label>
    <length>255</length>
    <type>Text</type>
</CustomField>