unpackaged/main/default/objects/Tax_Free_Form__c/fields/Shop_Address__c.field-meta.xml
<CustomField>
    <fullName>Shop_Address__c</fullName>
    <formula>Account_Shop__r.BillingStreet &amp; &quot; &quot; &amp;  Account_Shop__r.BillingCity &amp; &quot; &quot; &amp;  Account_Shop__r.BillingPostalCode &amp; &quot; &quot; &amp;  Account_Shop__r.BillingPostalCode</formula>
    <formulaTreatBlanksAs>BlankAsZero</formulaTreatBlanksAs>
    <label>Shop Address</label>
    <type>Text</type>
</CustomField>