unpackaged/main/default/objects/Tax_Free_Form__c/fields/TFF_ID_Short__c.field-meta.xml
<CustomField>
    <fullName>TFF_ID_Short__c</fullName>
    <formula>IF (BEGINS(Name, &quot;A&quot;), RIGHT(Name, 7), RIGHT(Name, 9))</formula>
    <formulaTreatBlanksAs>BlankAsZero</formulaTreatBlanksAs>
    <label>TFF ID Short</label>
    <type>Text</type>
</CustomField>