unpackaged/main/default/objects/Tax_Free_Form__c/fields/TFF_Search_Field__c.field-meta.xml
<CustomField>
    <fullName>TFF_Search_Field__c</fullName>
    <label>TFF Search Field</label>
    <length>9</length>
    <type>Text</type>
</CustomField>