unpackaged/main/default/objects/Tax_Free_Form__c/fields/Tourist__c.field-meta.xml
<CustomField>
    <fullName>Tourist__c</fullName>
    <deleteConstraint>SetNull</deleteConstraint>
    <label>Tourist</label>
    <lookupFilter>
        <active>true</active>
        <filterItems>
            <field>Account.RecordType.Name</field>
            <operation>equals</operation>
            <value>Tourist</value>
        </filterItems>
        <isOptional>false</isOptional>
    </lookupFilter>
    <referenceTo>Account</referenceTo>
    <relationshipLabel>Tax Free Form (Tourist)</relationshipLabel>
    <relationshipName>Tourist</relationshipName>
    <type>Lookup</type>
</CustomField>