unpackaged/main/default/objects/Tax_Free_Form__c/fields/Tourist_Address__c.field-meta.xml
<CustomField>
    <fullName>Tourist_Address__c</fullName>
    <label>Tourist Address</label>
    <length>131072</length>
    <type>LongTextArea</type>
</CustomField>