unpackaged/main/default/objects/Tax_Free_Form__c/fields/Tourist_DateOfBirth__c.field-meta.xml
<CustomField>
    <fullName>Tourist_DateOfBirth__c</fullName>
    <label>Tourist DateOfBirth</label>
    <type>Date</type>
</CustomField>