unpackaged/main/default/objects/Tax_Free_Form__c/fields/Tourist_Email_Address__c.field-meta.xml
<CustomField>
    <fullName>Tourist_Email_Address__c</fullName>
    <label>Tourist Email Address</label>
    <type>Email</type>
</CustomField>