unpackaged/main/default/objects/Tax_Free_Form__c/fields/Tourist_Final_Destination__c.field-meta.xml
<CustomField>
    <fullName>Tourist_Final_Destination__c</fullName>
    <label>Tourist Final Destination</label>
    <length>255</length>
    <type>Text</type>
</CustomField>