unpackaged/main/default/objects/Tax_Free_Form__c/fields/Tourist_Last_Name__c.field-meta.xml
<CustomField>
    <fullName>Tourist_Last_Name__c</fullName>
    <label>Tourist Last Name</label>
    <length>255</length>
    <type>Text</type>
</CustomField>