unpackaged/main/default/objects/Tax_Free_Form__c/fields/Tourist_Passport_Number__c.field-meta.xml
<CustomField>
    <fullName>Tourist_Passport_Number__c</fullName>
    <label>Tourist Passport Number</label>
    <length>255</length>
    <type>Text</type>
</CustomField>