unpackaged/main/default/objects/Tax_Free_Form__c/fields/Tourist_Phone_Number__c.field-meta.xml
<CustomField>
    <fullName>Tourist_Phone_Number__c</fullName>
    <label>Tourist Phone Number</label>
    <type>Phone</type>
</CustomField>