unpackaged/main/default/objects/Tax_Free_Form__c/fields/Tourist_Postal_Code__c.field-meta.xml
<CustomField>
    <fullName>Tourist_Postal_Code__c</fullName>
    <label>Tourist Postal Code</label>
    <length>255</length>
    <type>Text</type>
</CustomField>