unpackaged/main/default/objects/Tax_Free_Form__c/fields/Tourist_Premier_Pass_Id__c.field-meta.xml
<CustomField>
    <fullName>Tourist_Premier_Pass_Id__c</fullName>
    <label>Tourist Premier Pass Id</label>
    <length>255</length>
    <type>Text</type>
</CustomField>